- Fixed IE inline-block offset issue by vertically aligning whatever is next to some inline-block elements

--- a/styles/customer.css
+++ b/styles/customer.css
@@ -14,6 +14,12 @@ label{
 	display: inline-block;
 	width: 100px;
 	margin-bottom: 10px;
+	margin-right: 10px;
+	text-align: right;
+}
+
+input{
+	vertical-align: top;
 }
 
 #login_button{
