--- a/styles/index.css
+++ b/styles/index.css
@@ -14,6 +14,12 @@ label{
 	display: inline-block;
 	width: 100px;
 	margin-bottom: 10px;
+	margin-right: 10px;
+	text-align: right;
+}
+
+input{
+	vertical-align: top;
 }
 
 #submit_button{
@@ -21,6 +27,7 @@ label{
 	width: 75px;
 	margin-left: auto;
 	margin-right: auto;
+	clear: both;
 }
 
 #login_title{
